Release 3.8.0: Remove dependency on Spring Data. Turn domain classes into records.