@@ -1,5 +1,6 @@
 package org.keen.solar.solcast.forecast;
 
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.keen.solar.config.TestConfiguration;
@@ -8,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import org.springframework.util.Assert;
 
 import java.util.List;
 
@@ -27,11 +27,12 @@ public class ForecastRetrieverIT {
     public void givenApiIsOnline_whenRetrieve_thenForecastReturned() {
         List<GenerationForecast> forecasts = retriever.retrieve();
 
-        Assert.notEmpty(forecasts, "Expected forecasts to be returned");
-        Assert.state(forecasts.get(0).getPeriod_length_seconds() > 0, "Expected period length to be populated");
-        Assert.state(forecasts.get(0).getPeriod_end_epoch() > 0, "Expected period end epoch to be populated");
-        Assert.state(forecasts.get(0).getPv_estimate() > 0, "Expected pv estimate to be populated");
-        Assert.state(forecasts.get(0).getPv_estimate10() > 0, "Expected pv estimate 10 to be populated");
-        Assert.state(forecasts.get(0).getPv_estimate90() > 0, "Expected pv estimate 90 to be populated");
+        Assertions.assertFalse(forecasts.isEmpty(), "Expected forecasts to be returned");
+        GenerationForecast forecast = forecasts.getFirst();
+        Assertions.assertTrue(forecast.period_length_seconds() > 0, "Expected period length to be populated");
+        Assertions.assertTrue(forecast.period_end_epoch() > 0, "Expected period end epoch to be populated");
+        Assertions.assertTrue(forecast.pv_estimate() > 0, "Expected pv estimate to be populated");
+        Assertions.assertTrue(forecast.pv_estimate10() > 0, "Expected pv estimate 10 to be populated");
+        Assertions.assertTrue(forecast.pv_estimate90() > 0, "Expected pv estimate 90 to be populated");
     }
 }
